src/components/song-input/song-input.module.css
.input_container {
  margin-top: 20px;
  position: relative;
  display: flex;
}


.error {
  font-family: 'Space Grotesk';
  position: absolute;
  bottom: -24px;
  left: 0;
  margin-top: -20px;
  font-style: normal;
  font-weight: 300;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: -0.3px;
  color: #C6A827;
  z-index: 1;
}

.autoCompleteList {
  position: absolute;
  list-style-type: none;
  margin: 0;
  padding: 0 8px 0 8px;
  top: 100%;
  background: #FFFFFF;
  border-top: 1px solid rgba(0, 0, 0, 0.2);
  max-width: 524px;
  width: 100%;
  box-sizing: border-box;
  z-index: 2;
}

.autoCompleteListItem {
  padding: 12px 0;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  box-sizing: border-box;
  }

.autoCompleteListItemText {
  transition: all .3s ease-out;
  cursor: pointer;
  overflow: hidden;
  width: 100%;
  text-overflow: ellipsis;
  border: none;
  white-space: nowrap;
  background: transparent;
  font-style: normal;
  font-weight: 300;
  font-size: 20px;
  line-height: 28px;
  letter-spacing: -0.4px;
  color: #A4A3A4;
}

.autoCompleteListItemText:hover {
  color: #000;
}
.autoCompleteListItem:first-child {
  padding: 8px 0 12px 0
}

.autoCompleteListItem:last-child {
  border-bottom: none;
  padding-bottom: 8px;
}

.input_label {
  font-style: normal;
  font-weight: 400;
  font-size: 24px;
  line-height: 32px;
  letter-spacing: -0.4px;
  color: #1B191C;
}

.url_input {
  width: 524px;
  height: 96px;
  border: none;
  box-sizing: border-box;
  padding: 0 46px 0 16px;
  background: #FFFFFF;
  font-weight: 300;
  font-size: 24px;
  line-height: 32px;
  display: flex;
  align-items: center;
  letter-spacing: -0.4px;
}

.url_input::placeholder {
  color: #A4A3A4;
}

@media screen and (max-width: 1280px){
  .url_input, .autoCompleteList {
    width: 440px;
  }
}

@media screen and (max-width: 1024px){
  .url_input, .autoCompleteList {
    width: 524px;
  }
}

@media screen and (max-width: 768px){
  .url_input{
    width: 280px;
    height: 64px;
  }
}

@media screen and (max-width: 480px){
  .url_input, .autoCompleteList {
    width: 232px;
  }
}



.url_input:focus {
  border:none;
  outline: none;
}

.url_input_type_error, .url_input_type_error:focus {
  border: 0.5px solid #C6A827;
  background: #FFFFFF url("../../images/warning.svg") no-repeat;
  background-position: top 36px right 16px;
}

@media screen and (max-width: 768px){
  .url_input_type_error, .url_input_type_error:focus {
    background-position: top 20px right 16px;
  }
}

.input_submit {
  width: 96px;
  height: 96px;
  background: #F8D231 url("../../images/submit_arrow.svg") no-repeat center;
  border:none;
  outline: none;
  padding: 0;
  box-sizing: border-box;
  cursor: pointer;
}

@media screen and (max-width: 768px){
  .input_submit {
    width: 64px;
    height: 64px;
  }
}

@media screen and (max-width: 1280px){
  .input_label {
    margin-top: 10px;
    font-size: 20px;
  }
}

